@@ -71,11 +71,7 @@ try {
 
     try {
         if (isset($params['submit']) || isset($params['apply']) ) {
-            cms_utils::set_app_data('tmp_template', $params['contents']);
-            $parser = new \CMSMS\internal\page_template_parser('cms_template:appdata;tmp_template',$smarty);
-            $parser->compileTemplateSource();
             // do the magic.
-
             if (isset($params['description'])) $tpl_obj->set_description($params['description']);
             if (isset($params['type'])) $tpl_obj->set_type($params['type']);
             if (isset($params['default'])) $tpl_obj->set_type_dflt($params['default']);
@@ -88,7 +84,18 @@ try {
             $tpl_obj->set_content($params['contents']);
             $tpl_obj->set_name($params['name']);
 
+            if ($this->CheckPermission('Manage Designs')) {
+                $design_list = array();
+                if (isset($params['design_list'])) $design_list = $params['design_list'];
+                $tpl_obj->set_designs($design_list);
+            }
+
             $type_obj = CmsLayoutTemplateType::load($tpl_obj->get_type_id());
+
+            // lastly, check for errors in the template before we save.
+            cms_utils::set_app_data('tmp_template', $params['contents']);
+            $parser = new \CMSMS\internal\page_template_parser('cms_template:appdata;tmp_template',$smarty);
+            $parser->compileTemplateSource();
             if ($type_obj->get_content_block_flag()) {
                 $contentBlocks = CMS_Content_Block::get_content_blocks();
                 if (!is_array($contentBlocks) || count($contentBlocks) == 0) {
@@ -97,12 +104,6 @@ try {
                 if (!isset($contentBlocks['content_en'])) {
                     throw new CmsEditContentException('No default content block {content} or {content block=\'content_en\'} defined in template');
                 }
-            }
-
-            if ($this->CheckPermission('Manage Designs')) {
-                $design_list = array();
-                if (isset($params['design_list'])) $design_list = $params['design_list'];
-                $tpl_obj->set_designs($design_list);
             }
 
             // if we got here, we're golden.
