@@ -22,6 +22,7 @@ CMSContentManager v1.0.2
 
 DesignManager v1.1
 - Adds ability to toggle the listability of a template.
+- Fixes problems with lost changes if there is a syntax error in the template.
 
 News v2.50.2
 - Fixes minor issue with pagination in News admin console.
